--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav>
     <a href="#about">About</a>
     <a href="#instructions">Instructions</a>
-    <a href="#game">Game</a>
+    <a href="#game-board">Game</a>
   </nav>
   <main>
     <h2 id="about">
@@ -39,15 +39,18 @@
       <!--
         This div and series of imgs creates a "board" and the individual "cards" that will be displayed on the webpage
       -->
-      <div id="game">
-        <img src="images/back.png" alt="Queen of Diamonds">
-        <img src="images/back.png" alt="Queen of Hearts">
-        <img src="images/back.png" alt="King of Diamonds">
-        <img src="images/back.png" alt="King of Hearts">
+      <!-- <div id="game"> -->
+      <div id="game-board" class="board clearfix">
+        <!-- <img src="images/back.png" alt="Queen of Diamonds"> -->
+        <!-- <img src="images/back.png" alt="Queen of Hearts"> -->
+        <!-- <img src="images/back.png" alt="King of Diamonds"> -->
+        <!-- <img src="images/back.png" alt="King of Hearts"> -->
       </div>
+      <p id="gameResult">Click on any two above cards to play!</p>
     </p>
   </main>
-  <footer class="clearfix">
+  <!-- <footer class="clearfix"> -->
+  <footer class="board clearfix">
     <p class="copyright">
       Copyright 2017
     </p>
