improved gameplay flow + logic, added some height responsiveness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>MemorEyes: The Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
   <main class="game-main">
     <div class="instructions">
       <h2>Instructions</h2>
-      <p class="description">
+      <p>
         MemorEyes is a card memorization game in which all of the cards are laid face down on a surface and two cards are flipped over (face up) with each turn. The object of the game is to turn over pairs of matching pairs of cards (i.e. find a queen-king pair of the same suit: diamond with diamond or heart with heart).
       </p>
     </div>
