added mobile responsiveness (portrait-mode)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>MemorEyes: The Game</title>
+  <title>MemorEyes // Simon G. Tsegay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
 <body>
   <header class="game-header">
     <h1>
-      MemorEyes: The Game
+      MemorEyes
     </h1>
   </header>
   <nav class="game-navbar">
@@ -50,22 +50,17 @@
     </div>
   </main>
   <footer class="game-footer">
-    <p>
+    <p class='developed-by'>
       Developed by
-      <span class="name">
-        <a href="mailto:simon@simongt.net" target="_blank">
-          Simon G. Tsegay
-        </a>
-      </span>
+      <a href="mailto:simon@simongt.net" target="_blank">
+        Simon G. Tsegay
+      </a>
     </p>
-    <p>
+    <p class='inspired-by'>
       Inspired by
-      <span class="name">
-        <a href="https://dash.generalassemb.ly" target="_blank">
-          General Assembly
-        </a>
-      </span>
-
+      <a href="https://dash.generalassemb.ly" target="_blank">
+        General Assembly
+      </a>
     </p>
   </footer>
   <script src="js/main.js">
