--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>MemorEyes // Simon G. Tsegay</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, minimal-ui"> 
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
