--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <footer class="game-footer">
     <p class='developed-by'>
       Developed by
-      <a href="mailto:simon@simongt.net" target="_blank">
+      <a href="https://github.com/simongt/memor-eyes" target="_blank">
         Simon G. Tsegay
       </a>
     </p>
