improved ticker with better message updates

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="instructions">
       <h2>Instructions</h2>
       <p>
-        MemorEyes is a card memorization game in which all of the cards are laid face down on a surface and two cards are flipped over (face up) with each turn. The object of the game is to turn over pairs of matching pairs of cards (i.e. find a queen-king pair of the same suit: diamond with diamond or heart with heart).
+        MemorEyes is a card memorization game in which all of the playing cards are laid face down on a surface, then two cards are flipped over (face up) with each turn. The object of the game is to turn over card-pairs of matching ranks (i.e. find a queen-queen pair or king-king pair).
       </p>
     </div>
     <div class="game-container">
       <div class="game-board"></div>
-      <p class="game-result">Click on any two above cards to play!</p>
+      <p class="game-result">Click on any card to start playing.</p>
     </div>
     <div class="about">
       <h2>About Simon G. Tsegay</h2>
